Improve and unify error handling; add request validator

--- a/backend/package.json
+++ b/backend/package.json
@@ -44,6 +44,7 @@
     "types:check": "tsc --project './tsconfig.json' --noEmit"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "concurrently": "^8.2.2",
