--- a/backend/package.json
+++ b/backend/package.json
@@ -58,6 +58,7 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "joi": "^17.12.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
     "xss-shield": "^1.0.1"
@@ -71,6 +72,7 @@
     "@types/eslint": "^8.56.6",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
