Update env variable schema validation; implement authentication and authorization handling middleware; define the signIn function; improve error handling; refactor

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,16 +2,17 @@
 NODE_ENV="development"
 SERVER_PROTOCOL="http"
 SERVER_HOSTNAME="localhost"
-SERVER_PORT=4000
+SERVER_PORT="4000"
 
 # CLIENT
 CLIENT_PROTOCOL="http"
 CLIENT_HOSTNAME="localhost"
-CLIENT_PORT=3000
+CLIENT_PORT="3000"
 
 # DATABASE
 DATABASE_URL=""
 
 # AUTHENTICATION
 JWT_SIGNING_KEY=""
-JWT_EXPIRATION_TIME=""
+JWT_EXPIRATION_TIME="1d"
+JWT_EXPIRATION_TIME_IN_MS="86400000"
