--- a/backend/package.json
+++ b/backend/package.json
@@ -33,8 +33,8 @@
     "build": "rm -rf dist/ && tsc --project './tsconfig.build.json'",
     "start": "pnpm build && NODE_ENV=production node --trace-warnings './dist/server.js'",
     "watch": "tsc --project './tsconfig.build.json' --watch",
-    "db:seed": "pnpm build && node './dist/db/seed-database.js'",
-    "db:clear": "pnpm build && node './dist/db/seed-database.js -c'",
+    "db:seed": "pnpm build && node './dist/db/seed-database.db.js'",
+    "db:clear": "pnpm build && node './dist/db/seed-database.db.js -c'",
     "packages:update-all": "pnpm update --latest",
     "prettier:format": "prettier --write \"**/*.{ts,tsx,cjs}\" --cache",
     "prettier:check": "prettier --check \"**/*.{ts,tsx,cjs}\" --cache",
@@ -57,11 +57,11 @@
     "express-rate-limit": "^7.2.0",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
-    "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
-    "xss-shield": "^1.0.1"
+    "xss-shield": "^1.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
